--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
 remote_theme: pages-themes/tactile@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
+  - jekyll-include-cache
+
+include:
+  - _includes
+  - assets/css/custom.css
+
+markdown: kramdown
+highlighter: rouge
+
+# Custom CSS
+style: /assets/css/custom.css
