--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - jekyll-remote-theme
-
-# Add this line to include the custom CSS file
-include:
-  - assets/css/custom.css
+- jekyll-remote-theme # add this line to the plugins list if you already have one
